--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>Ermak</title>
 </head>
-<body>
-<h7></h7> for my sister</h7>
+<body style="background:url('/I\ Can.jpg') ; background-size:cover">
+<h1 style="color:red">for my sister</h1>
 </body>
-<p>horse</p>
+<p style="color:white">The horse</p>
 <img src="/Конь.jpg" style="width: 500px;">
 <a href="/yroky.html">Дневник</a>
+<a href="/lager.html">Мероприятия</a>
